--- a/functions/gen-opengraph-image/package.json
+++ b/functions/gen-opengraph-image/package.json
@@ -6,5 +6,22 @@
   "dependencies": {
     "playwright-aws-lambda": "^0.4.0",
     "playwright-core": "^0.11.1"
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "@rollup/plugin-replace": "^2.3.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "rollup": "^2.38.2",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0"
+  },
+  "scripts": {
+    "build": "rollup -c rollup.config.js"
+  } 
 }
